--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,7 @@
   font-weight: normal;
   color: #2f80ed;
   width: 175px;
+  margin-top: 0;
 }
 
 .two-columns__main-text {
@@ -113,6 +114,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin-top: 0;
 }
 
 .two-columns__span-accent {
@@ -132,6 +134,8 @@
   font-size: 60px;
   font-weight: bold;
   margin: 0 auto 20px;
+  z-index: 1;
+  position: relative;
 }
 
 .section-subtitle {
@@ -140,6 +144,8 @@
   font-size: 24px;
   font-weight: normal;
   margin: 0 auto;
+  z-index: 1;
+  position: relative;
 }
 
 .table {
@@ -148,17 +154,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
+  z-index: 1;
+  position: relative;
 }
 
 .table__cell {
   margin-top: 60px;
-}
-
-.table__cell_width_small {
-  width: 200px;
-}
-
-.table__cell_width_middle {
   width: 250px;
 }
 
@@ -182,6 +183,10 @@
   padding-top: 100px;
   position: relative;
   background-color: #f2f2f2;
+  background-image: url(../images/feinman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
 }
 
 .feinman__title {
@@ -213,6 +218,7 @@
   position: absolute;
   top: 50%;
   right: 48px;
+  z-index: 2;
 }
 
 .feinmann__main-illustration {
@@ -234,8 +240,20 @@
   padding: 90px 0;
   position: relative;
   overflow: hidden;
-  z-index: -2;
+  /* color: white; */
+}
+
+.section-title_theme_dark {
   color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table__cell_theme_dark {
+  color: white;
+  width: 200px;
 }
 
 .kaufman__triangle {
@@ -246,7 +264,6 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
 }
 
 /* foooter */
@@ -258,7 +275,6 @@
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  color: white;
 }
 
 .footer__columns {
@@ -289,17 +305,21 @@
 .footer__author {
   line-height: 25px;
   font-size: 18px;
+  color: white;
 }
 
 .footer__column-heading {
   font-weight: bold;
   margin: 0;
+  color: white;
 }
 
 .footer__column-links {
   display: flex;
   flex-direction: column;
   margin: 20px 0 16px;
+  list-style-type: none;
+  padding: 0;
 }
 
 .footer__link {
