--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,4 +1,8 @@
 .footer__link {
-    text-decoration: none;
-    color: white;
-  }
+  text-decoration: none;
+  color: white;
+  transition: opacity 0.2s linear;
+}
+.footer__link:hover {
+  opacity: 0.5;
+}
