--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,3 +1,12 @@
+@keyframes kaufman__triangle_rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .kaufman__triangle {
   width: 877px;
   height: 877px;
@@ -6,4 +15,5 @@
   position: absolute;
   top: 0;
   right: -210px;
+  animation: kaufman__triangle_rotation 20s normal infinite linear;
 }
