--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,6 +1,6 @@
 .footer__columns {
     width: 90%;
-    height: 250px;
+    min-height: 250px;
     display: flex;
     justify-content: space-between;
   }
