--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,9 @@
 .header__link {
     text-decoration: none;
     color: #2f80ed;
+    transition: opacity .2s linear;
   }
+
+.header__link:hover {
+  opacity: .50;
+}
