--- a/pages/index.css
+++ b/pages/index.css
@@ -4,10 +4,16 @@
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/description/description.css);
 @import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/technics/technics.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/oakley/ooakley.css);
+@import url(../blocks/feinman/feinman.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/table/table.css);
-@import url(../blocks/feinman/feinman.css);
+@import url(../blocks/khan/khan.css);
 @import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/resources/resources.css);
 @import url(../blocks/footer/footer.css);
